# OptiVorbis

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.BSD-3-Clause  OptiVorbis worker.js  README.md  deny.toml  index.html  main.css  main.js  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/workflows/: ci.yml
assets/: manifest.json  manifest.webapp  manifest.webmanifest
scripts/: afl-fuzz.sh
web/: .eslintrc.json  eslint.config.mjs  package-lock.json  package.json  postcss.config.js  tsconfig.json  webpack.config.js
web/src/: index.html
web/src/css/: main.css
web/src/ts/: file_error_modal.ts  input_file_drop_zone.ts  input_file_handler.ts  main.ts  optivorbis_worker.ts  output_file_section.ts
