[workspace]
resolver = "3"
members = ["packages/*"]
default-members = ["packages/optivorbis", "packages/optivorbis_cli"]

[workspace.package]
version = "0.3.0"
authors = ["Alejandro González <me@alegon.dev>"]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://optivorbis.github.io/OptiVorbis"
repository = "https://github.com/OptiVorbis/OptiVorbis"
keywords = ["audio", "compression", "ogg", "optimization", "vorbis"]
categories = ["compression", "multimedia::audio"]

[workspace.dependencies]
acid_io = "0.1.0"
afl = "0.16.0"
bumpalo = "3.17.0"
console_log = "1.0.0"
getopts = "0.2.21"
getrandom = "0.3.1"
indexmap = "2.8.0"
libm = "0.2.11"
log = "0.4.26"
ogg = "0.9.2"
oggvorbismeta = "0.2.0"
optivorbis = { path = "packages/optivorbis", version = "0.3.0" }
ouroboros = "0.18.5"
rand_xoshiro = "0.7.0"
rlsf = "0.2.1"
slice-group-by = "0.3.1"
stderrlog = { version = "0.6.0", default-features = false }
test-log = "0.2.18"
thiserror = "2.0.16"
tinyvec = { version = "1.9.0", default-features = false, features = [
  "alloc",
  "rustc_1_57",
] }
vorbis_bitpack = { path = "packages/vorbis_bitpack", version = "0.2.0" }
wasm-bindgen = { version = "0.2.100", default-features = false }
web-sys = "0.3.80"

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.min-size-release]
inherits = "release"
opt-level = "z"

[profile.fuzzing]
inherits = "release"
overflow-checks = true
panic = "unwind"

[profile.bench]
inherits = "release"
debug = true
strip = "none"
