[workspace]
resolver = "3"
members = ["packages/*"]
default-members = ["packages/optivorbis", "packages/optivorbis_cli"]

[workspace.package]
version = "0.3.0"
authors = ["Alejandro González <me@alegon.dev>"]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://optivorbis.github.io/OptiVorbis"
repository = "https://github.com/OptiVorbis/OptiVorbis"
keywords = ["audio", "compression", "ogg", "optimization", "vorbis"]
categories = ["compression", "multimedia::audio"]

[workspace.dependencies]
acid_io = "0.1.0"
afl = "0.18.2"
bumpalo = "3.20.3"
console_log = "1.0.0"
getopts = "0.2.24"
getrandom = "0.4.2"
indexmap = "2.14.0"
libm = "0.2.16"
log = "0.4.32"
ogg = "0.9.2"
oggvorbismeta = "0.2.0"
optivorbis = { path = "packages/optivorbis", version = "0.3.0" }
ouroboros = "0.18.5"
rand_xoshiro = "0.8.1"
rlsf = "0.2.2"
slice-group-by = "0.3.1"
stderrlog = { version = "0.6.0", default-features = false }
test-log = "0.2.21"
thiserror = "2.0.18"
tinyvec = { version = "1.11.0", default-features = false, features = [
  "alloc",
  "rustc_1_57",
] }
vorbis_bitpack = { path = "packages/vorbis_bitpack", version = "0.2.0" }
vorbis_rs = { version = "0.5.5", default-features = false }
wasm-bindgen = { version = "0.2.125", default-features = false }
web-sys = "0.3.102"

[profile.bench]
inherits = "release"
debug = true
strip = "none"

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.fuzzing]
inherits = "release"
overflow-checks = true
panic = "unwind"

[profile.min-size-release]
inherits = "release"
opt-level = "z"
